<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#FC9A01">

        <TextView
            android:id="@+id/Logintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="164dp"
            android:fontFamily="@font/league_spartan"
            android:text="@string/Signup"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="750dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="56dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/info"
                android:textColor="@color/Brown_color"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/Name2"
                android:textColor="@color/Brown_color"
                android:textColorLink="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/emailField2"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/rectangle_shape"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/emailtxt2"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/passField2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailField2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/phone2"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passField2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="Password"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneField" />

            <EditText
                android:id="@+id/passField2"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/rectangle_shape"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="145dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/orsignup"
                android:textColor="@color/Brown_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbtn2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="144dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/info2"
                android:textColor="@color/Brown_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/loginclick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="82dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/login3"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbtn2"
                android:clickable="true"
                android:onClick="onTextClicked"
                />

            <Button
                android:id="@+id/loginbtn2"
                android:layout_width="192dp"
                android:layout_height="49dp"
                android:layout_marginStart="109dp"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/Signup"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passField" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="188dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:srcCompat="@drawable/google_icon" />

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/rectangle_shape"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/rectangle_shape"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>











