<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#FC9A01">

        <TextView
            android:id="@+id/Profiletxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="627dp"
            android:fontFamily="@font/league_spartan"
            android:text="@string/Profile"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-15dp"
        app:cardCornerRadius="28dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <!-- Name Field (changed from EditText to TextView) -->
            <TextView
                android:id="@+id/firstnameid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/Name2"
                android:textColor="@color/Brown_color"
                android:textColorLink="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/firstnameDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Email Field -->
            <TextView
                android:id="@+id/firstnameDisplay"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_shape"
                android:fontFamily="@font/league_spartan"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/emailtxt2"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/emailDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/emailDisplay"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_shape"
                android:fontFamily="@font/league_spartan"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Phone Field -->
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/phone2"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/phoneDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/phoneDisplay"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_shape"
                android:fontFamily="@font/league_spartan"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Nationality Field -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="225dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="@string/Nationality"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/countryDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/countryDisplay"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginStart="225dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_shape"
                android:fontFamily="@font/league_spartan"
                android:gravity="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Password Field (hidden or shown as asterisks) -->
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.7"
                android:fontFamily="@font/league_spartan"
                android:text="Password"
                android:textColor="@color/Brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/passDisplay"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Profile Image -->

            <TextView
                android:id="@+id/passDisplay"
                android:layout_width="322dp"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="145dp"
                android:background="@drawable/rectangle_shape"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="••••••••"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/logout"
                android:layout_width="195dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="55dp"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/Logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="106dp"
                android:layout_height="54dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="152dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>